fixed aft slider scrollbar

--- a/src/app/main-content/atf/atf.component.scss
+++ b/src/app/main-content/atf/atf.component.scss
@@ -116,7 +116,7 @@ h2 {
   position: absolute;
   bottom: 80px;
   background: rgba(255, 255, 255, 0.12);
-  rotate: -3deg;
+  transform: skewY(-3deg);
   width: 100%;
   overflow: hidden;
   > div {
